# Personal-Projects

./: Readme.md
Algorithmic Trading Strategy/: .gitignore  CMakeLists.txt  README.md
Algorithmic Trading Strategy/docs/: FINDINGS.md
Algorithmic Trading Strategy/python/: requirements.txt
Algorithmic Trading Strategy/sql/: schema.sql
Algorithmic Trading Strategy/src/: benchmark.cpp  main.cpp  walk_forward_runner.cpp
Algorithmic Trading Strategy/tests/: test_execution.cpp  test_framework.h  test_main.cpp  test_metrics.cpp  test_momentum.cpp  test_portfolio.cpp  test_walk_forward.cpp
Options Pricing and Greeks Engine/: .gitignore  CMakeLists.txt  README.md
Options Pricing and Greeks Engine/docs/: FINDINGS.md
Options Pricing and Greeks Engine/python/: requirements.txt
Options Pricing and Greeks Engine/src/: benchmark.cpp  main.cpp
Options Pricing and Greeks Engine/tests/: test_black_scholes.cpp  test_framework.h  test_greeks.cpp  test_implied_vol.cpp  test_main.cpp  test_monte_carlo.cpp  test_vol_surface.cpp
backtest-engineering-framework/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.txt
backtest-engineering-framework/benchmarks/: throughput_benchmark.py
backtest-engineering-framework/configs/: momentum_walk_forward.yaml  research_scale.yaml
backtest-engineering-framework/scripts/: generate_sample_data.py  parameter_sweep.py  run_walk_forward.py
backtest-engineering-framework/tests/: test_backtest.py  test_execution.py
browser-agent-runtime/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
browser-agent-runtime/app/: config.py  db.py  main.py  models.py  schemas.py  worker.py
browser-agent-runtime/scripts/: demo_seed.py
browser-agent-runtime/tests/: test_permissions.py  test_planner.py
causal-inference-difference-in-differences/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
causal-inference-difference-in-differences/artifacts/: analysis_summary.json
causal-inference-difference-in-differences/configs/: default.yaml
causal-inference-difference-in-differences/r/: fixest_replication.R
causal-inference-difference-in-differences/scripts/: bootstrap.sh  run_benchmark.sh  run_sample_analysis.sh
causal-inference-difference-in-differences/tests/: test_data.py  test_diagnostics.py  test_estimators.py
census-data-analytics-visualization/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
census-data-analytics-visualization/artifacts/: benchmark_results.txt  cli_output.json  demo_report.json
census-data-analytics-visualization/benchmarks/: benchmark_queries.py
census-data-analytics-visualization/examples/: sample_query.json
census-data-analytics-visualization/scripts/: run_demo.py  smoke_test.py
census-data-analytics-visualization/tests/: test_analysis.py  test_fetch.py
cloud-native-production-platform/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
cloud-native-production-platform/cloud_native_production_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cloud-native-production-platform/docs/: ARCHITECTURE.md  COST_MODEL.md  FINDINGS.md  OPERATIONS.md
cloud-native-production-platform/scripts/: render_assets.py
cloud-native-production-platform/tests/: test_catalog.py  test_gateway.py  test_orders.py
customer-churn-prediction-intervention/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
customer-churn-prediction-intervention/api/: main.py
customer-churn-prediction-intervention/artifacts/: README.md
customer-churn-prediction-intervention/dashboard/: app.py
customer-churn-prediction-intervention/data/: README.md  (+1 more)
distributed-data-acquisition-system/: .gitignore  CMakeLists.txt  Makefile  README.md
dynamic-pricing-algorithm-optimization/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
ecommerce-conversion-optimization/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
experimental-design-power-analysis-tool/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
firmware-build-and-verification-tooling/: Dockerfile  Makefile  README.md  pyproject.toml
geometry-processing-pipeline/: .gitignore  Makefile  README.md  pyproject.toml
high-performance-storage-infrastructure/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
infrastructure-automation-framework/: Makefile  README.md  pyproject.toml
linux-latency-diagnostics-scheduler-profiler/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
llm_eval_inference_stack/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
low-latency-matching-engine-market-data-feed/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
marketing-attribution-response-modeling/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ml-data-preparation-pipeline/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
multimodal-ocr-vlm-serving-stack/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
portfolio-rebalancing-risk-management/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
production-ml-serving-infrastructure/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
real-time-control-system/: .gitignore  CMakeLists.txt  Makefile  README.md
real-time-data-processing-platform/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
secure-data-processing-service/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
(+1426 files in other folders)
