[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-agent-runtime"
version = "0.1.0"
description = "A browser-native agent runtime for authenticated workflows, safe execution, and replayable traces."
authors = [{ name = "Srijan Gupta" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.0",
    "redis>=5.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "playwright>=1.48.0",
    "python-slugify>=8.0.4",
    "orjson>=3.10.7",
    "tenacity>=9.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]

[tool.setuptools]
packages = ["app", "app.api", "app.runtime", "app.services", "app.utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
