[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "did-policy-lab"
version = "0.1.0"
description = "Difference-in-differences policy evaluation framework with event studies and synthetic control fallback."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Srijan Gupta" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "jinja2>=3.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4"
]

[project.scripts]
did-lab = "did_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
