[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-native-production-platform"
version = "0.1.0"
description = "Production-style cloud-native platform with Docker Compose local stack and Terraform AWS infrastructure"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "prometheus-client>=0.20,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [
  ".",
  "services/gateway",
  "services/catalog",
  "services/orders"
]

[tool.setuptools]
py-modules = []
