[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-prediction-intervention"
version = "0.1.0"
description = "End-to-end churn prediction and intervention system for SaaS customers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Srijan Gupta" }]
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.5,<2.0",
  "xgboost>=2.1,<3.0",
  "shap>=0.46,<1.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "streamlit>=1.38,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "python-dotenv>=1.0,<2.0",
  "plotly>=5.24,<6.0",
  "matplotlib>=3.9,<4.0",
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
