[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-pricing-engine"
version = "0.1.0"
description = "Dynamic pricing optimization engine with demand modeling, guardrails, FastAPI serving, and dashboard artifacts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Srijan Gupta" }]
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.5,<2.0",
  "xgboost>=2.1,<3.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "plotly>=5.24,<6.0",
  "matplotlib>=3.8,<4.0",
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0,<2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
