[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infrastructure-automation-framework"
version = "0.1.0"
description = "Internal platform style CLI for service scaffolding, environment creation, helm rendering, and rollout planning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Srijan Gupta" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
infraforge = "infraforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
