[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latdiag"
version = "0.1.0"
description = "Linux latency diagnostics and scheduler profiling toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Srijan Gupta"}]
dependencies = [
  "typer>=0.12,<1",
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
latdiag = "latdiag.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["latdiag*"]
