[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-inference-stack"
version = "0.1.0"
description = "Production-style LLM evaluation and inference stack with FastAPI, MLflow, Hugging Face, and vLLM"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Srijan Gupta" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "mlflow>=3.0.0",
  "transformers>=4.48.0",
  "torch>=2.3.0",
  "sentence-transformers>=3.0.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
  "tqdm>=4.66.0",
  "tenacity>=9.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0"
]
vllm = [
  "openai>=1.40.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
