[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-attribution-response-modeling"
version = "0.1.0"
description = "Marketing attribution, response modeling, and budget reallocation project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Srijan Gupta" }]
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.5,<2.0",
  "matplotlib>=3.8,<4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
