[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-data-preparation-pipeline"
version = "0.1.0"
description = "Production-minded ML data preparation pipeline with validation, feature engineering, train-test-safe transforms, and quality reporting."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Srijan Gupta"}]
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.1",
  "great-expectations>=1.0.0",
  "PyYAML>=6.0.2",
  "Jinja2>=3.1.4",
  "joblib>=1.4.2",
  "SQLAlchemy>=2.0.32",
  "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.2"
]

[project.scripts]
mlprep = "mlprep.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
