[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "production-ml-serving-infrastructure"
version = "0.1.0"
description = "Production-minded ML serving platform with real-time and batch inference, caching, observability, and deployment scaffolding."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "torch>=2.2.0",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "cachetools>=5.4.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "mlflow>=2.15.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0",
  "orjson>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
